<resources>
    <string name="app_name">Demo_Android_Learning</string>
    <string name="menu_settings">Settings</string>
    <string name="question_text">Constantinople is the largest city in Turkey.</string>
    <string name="true_button">True</string>
    <string name="false_button">False</string>
    <string name="previous_button">Previous</string>
    <string name="next_button">Next</string>
    <string name="correct_toast">Correct!</string>
    <string name="incorrect_toast">InCorrect!</string>
    <string name="cheat_button">Cheat!</string>
    <string name="warning_text">Are you sure you want to do this?</string>
    <string name="show_answer_button">Show Answer</string>
    <string name="judgment_toast">Cheating is wrong.</string>

    <string name="question_oceans">1.The Pacific Ocean is larger than the Atlantic Ocean.</string>
    <string name="question_mideast">2.The Suez Canal connects the Red Sea and the Indian Ocean.</string>
    <string name="question_africa">3.The source of the Nile River is in Egypt.</string>
    <string name="question_americas">4.The Amazon River is the longest river in the Americas.</string>
    <string name="question_asia">5.Lake Baikal is the world\'s oldest and deepest freshwater lake.</string>
</resources>
